<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refusalScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/simprints_blue"
    android:fitsSystemWindows="true"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.simprints.fingerprint.activities.refusal.RefusalActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/whySkipFingerprintingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textAlignment="center"
            android:textColor="@color/simprints_white"
            android:textSize="25sp" />

        <RadioGroup
            android:id="@+id/refusalRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">

            <RadioButton
                android:id="@+id/rbReligiousConcerns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/simprints_white"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/rbDataConcerns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/simprints_white"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/rbDoesNotHavePermission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/simprints_white"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/rbAppNotWorking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/simprints_white"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/rbPersonNotPresent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/simprints_white"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/rbTooYoung"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/simprints_white"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/rbOther"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/simprints_white"
                android:textSize="20sp" />

        </RadioGroup>

        <EditText
            android:id="@+id/refusalText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:background="@color/simprints_white"
            android:enabled="false"
            android:gravity="top|start"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:maxLength="100"
            android:maxLines="4"
            android:minHeight="100dp"
            android:padding="4dp" />

        <LinearLayout
            android:id="@+id/refusalButtonsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btScanFingerprints"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="70dp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btSubmitRefusalForm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:minHeight="70dp"
                tools:ignore="ButtonStyle" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>
